Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
@@ -37,6 +37,13 @@
         </tr>
       </table>
     </form>
+
+    <table id="diagram">
+      <tr>
+        <th>Was:</th>
+        <th>Becomes:</th>
+      </tr>
+    </table>
       
     <script>
       console.log("Ola");
