Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
@@ -43,6 +43,18 @@
         <th>Was:</th>
         <th>Becomes:</th>
       </tr>
+      <tr>
+        <th id="money-before">a</th>
+        <th id="money-after">b</th>
+      </tr>
+      <tr>
+        <td>
+          <div style="background: red; width: 40px; height: 100px"></div>
+        </td>
+        <td>
+          <div style="background: green; width: 40px; height:0" id="height-after"></div>
+        </td>
+      </tr>
     </table>
       
     <script>
