Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
@@ -58,7 +58,15 @@
     </table>
       
     <script>
-      console.log("Ola");
+      const form = document.forms.calculator;
+
+      form.money.oninput = calculate;
+      form.months.onchange = calculate;
+      form.interest.oninput = calculate;
+
+      function calculate(e) {
+        
+      }
     </script>
   </body>
 </html>
