Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
@@ -65,6 +65,9 @@
       form.interest.oninput = calculate;
 
       function calculate(e) {
+        const initial = +form.money.value;
+        if (!initial) return;
+
         
       }
     </script>
