Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
@@ -73,7 +73,13 @@
 
         const years = form.months.value / 12;
         if (!years) return;
+
+        const result = Math.round(initial * (1 + interest) ** years);
+        document.getElementById("money-before").innerHTML = initial;
+        document.getElementById("money-after").innerHTML = result;
       }
+
+      calculate();
     </script>
   </body>
 </html>
