Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <form onsubmit="console.log('submit!'); return false;">
+    <form 
+      action="https://google.com/search" 
+      method="get" 
+      onsubmit="console.log('submit!'); return false;"
+    >
       First: Enter in the input field <input type="text" value="text">
       <br>
       Second: Click submit <input type="submit" value="Submit">
