Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
@@ -9,6 +9,7 @@
       First: Enter in the input field <input type="text" value="text">
       <br>
       Second: Click submit <input type="submit" value="Submit">
+      Input Image: <input type="image" src="https://picsum.photos/200" alt="">
     </form>
 
     <script>
