Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
@@ -8,6 +8,8 @@
     >
       First: Enter in the input field <input type="text" value="text">
       <br>
+      Frist Name: <input type="text">
+      <br>
       Second: Click submit <input type="submit" value="Submit">
       <br>
       Input Image: <input type="image" src="https://picsum.photos/200" alt="">
