Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
@@ -21,6 +21,19 @@
       <input type="submit" value="Submit" onclick="console.log(event.type)">
     </form>
 
+    <h2>Query Google</h2>
+    <form 
+      action="https://google.com/search"
+      method="get"
+      target="_blank"
+    >
+      <input type="text" name="q" value="test">
+      <br>
+      <input type="submit" value="Search google">
+    </form>
+
+    <h2>Method: submit</h2>
+
     <script>
       console.log("Ola");
     </script>
