--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
@@ -35,7 +35,12 @@
     <h2>Method: submit</h2>
 
     <script>
-      console.log("Ola");
+      const form = document.createElement("form");
+      form.action = "https://www.youtube.com/results";
+      form.method = "GET";
+      form.target = "_blank";
+
+      form.innerHTML = "<input type='text' name='search_query' value='javascript'>"
     </script>
   </body>
 </html>
