Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
@@ -40,7 +40,10 @@
       form.method = "GET";
       form.target = "_blank";
 
-      form.innerHTML = "<input type='text' name='search_query' value='javascript'>";
+      form.innerHTML = `
+        <input type="text" name="search_query" value="javascript">
+        <input type="submit">
+      `;
       document.body.append(form);
       form.submit();
     </script>
