Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/index.html
@@ -44,7 +44,10 @@
         <input type="text" name="search_query" value="javascript">
         <input type="submit">
       `;
+
+      // the form must be in the document to submit it
       document.body.append(form);
+      
       form.submit();
     </script>
   </body>
