Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <div id="prompt-form-container">
+      <form id="prompt-form">
+        <div id="prompt-message">
+          Enter something...
+          <br>Please..
+        </div>
+        <input name="text" type="text">
+        <input type="submit" value="Ok">
+        <input name="cancel" type="button" value="Cancel">
+      </form>
+    </div>
+
+
     <script>
       console.log("Ola");
     </script>
