Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
   <body>
     <div id="prompt-form-container">
       <form id="prompt-form">
