Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -8,6 +8,15 @@
         margin: 0;
         padding: 0;
       }
+
+      #prompt-form {
+        display: inline-block;
+        border: 1px solid black;
+        width: 200px;
+        background: white url(https://en.js.cx/clipart/prompt.png) no-repeat left 5px;
+        vertical-align: middle;
+        padding: 5px 5px 5px 70px;
+      }
     </style>
   </head>
   <body>
