--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -17,6 +17,16 @@
         vertical-align: middle;
         padding: 5px 5px 5px 70px;
       }
+
+      #prompt-form-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 9999;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
