Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -27,6 +27,13 @@
         height: 100%;
         text-align: center;
       }
+
+      #prompt-form-container::before {
+        display: inline-block;
+        height: 100%;
+        content: "";
+        vertical-align: middle;
+      }
     </style>
   </head>
   <body>
