Forms: event and submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -34,6 +34,12 @@
         content: "";
         vertical-align: middle;
       }
+
+      #prompt-form input[name="text"] {
+        display: block;
+        margin: 5px;
+        width: 180px;
+      }
     </style>
   </head>
   <body>
