--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -43,6 +43,9 @@
     </style>
   </head>
   <body>
+    <h1>Click the button below</h1>
+    <button>Click to show the form</button>
+    
     <div id="prompt-form-container">
       <form id="prompt-form">
         <div id="prompt-message">
