Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -70,8 +70,14 @@
     </div>
 
     <script>
+      function showPrompt(text, callback) {
+
+      }
+
       document.getElementById("show-button").onclick = function() {
-        
+        showPrompt("Enter something<br>...smart :)", function(value) {
+          alert("You entered: " + value);
+        });
       }
     </script>
   </body>
