Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -70,8 +70,18 @@
     </div> -->
 
     <script>
+      function showCover() {
+        const coverDiv = document.createElement("div");
+        coverDiv.id = "cover-div";
+
+        // make the page unscrollable while the modal form is open
+        document.body.style.overflowY = "hidden";
+
+        document.body.append(coverDiv);
+      }
+
       function showPrompt(text, callback) {
-        callback(text);
+        showCover();
       }
 
       document.getElementById("show-button").onclick = function() {
