Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -80,6 +80,11 @@
         document.body.append(coverDiv);
       }
 
+      function hideCover() {
+        document.getElementById("cover-div").remove();
+        document.body.style.overflowY = "";
+      }
+      
       function showPrompt(text, callback) {
         showCover();
       }
