--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -23,6 +23,7 @@
         top: 0;
         left: 0;
         z-index: 9999;
+        display: none;
         width: 100%;
         height: 100%;
         text-align: center;
@@ -57,7 +58,7 @@
     <h1>Click the button below</h1>
     <input type="button" value="Click to show the form" id="show-button">
     
-    <!-- <div id="prompt-form-container">
+    <div id="prompt-form-container">
       <form id="prompt-form">
         <div id="prompt-message">
           Enter something...
@@ -67,7 +68,7 @@
         <input type="submit" value="Ok">
         <input name="cancel" type="button" value="Cancel">
       </form>
-    </div> -->
+    </div>
 
     <script>
       function showCover() {
@@ -87,6 +88,7 @@
 
       function showPrompt(text, callback) {
         showCover();
+        const form = document.getElementById("")
       }
 
       document.getElementById("show-button").onclick = function() {
