Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -88,7 +88,9 @@
 
       function showPrompt(text, callback) {
         showCover();
-        const form = document.getElementById("")
+        const form = document.getElementById("prompt-form");
+        const container = document.getElementById("prompt-form-container");
+        document.getElementById("prompt-message").innerHTML = text;
       }
 
       document.getElementById("show-button").onclick = function() {
