--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -60,10 +60,7 @@
     
     <div id="prompt-form-container">
       <form id="prompt-form">
-        <div id="prompt-message">
-          Enter something...
-          <br>Please..
-        </div>
+        <div id="prompt-message"></div>
         <input name="text" type="text">
         <input type="submit" value="Ok">
         <input name="cancel" type="button" value="Cancel">
@@ -91,6 +88,7 @@
         const form = document.getElementById("prompt-form");
         const container = document.getElementById("prompt-form-container");
         document.getElementById("prompt-message").innerHTML = text;
+        form.text.value = "";
       }
 
       document.getElementById("show-button").onclick = function() {
