Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -89,6 +89,9 @@
         const container = document.getElementById("prompt-form-container");
         document.getElementById("prompt-message").innerHTML = text;
         form.text.value = "";
+
+        container.style.display = "block";
+        form.text.focus();
       }
 
       document.getElementById("show-button").onclick = function() {
