Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -97,6 +97,14 @@
           callback(value);
         }
 
+        form.onsubmit = function() {
+          const value = form.text.value;
+          if (value === "") return false;
+
+          complete(value);
+          return false;
+        }
+
         container.style.display = "block";
         form.text.focus();
       }
