Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -105,6 +105,10 @@
           return false;
         }
 
+        form.cancel.onclick = function() {
+          complete(null);
+        }
+
         container.style.display = "block";
         form.text.focus();
       }
