Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -115,6 +115,9 @@
           }
         };
 
+        const lastElem = form.elements[form.elements.length - 1];
+        const firstElem = form.elements[0];
+
         container.style.display = "block";
         form.text.focus();
       }
