Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -118,6 +118,13 @@
         const lastElem = form.elements[form.elements.length - 1];
         const firstElem = form.elements[0];
 
+        lastElem.onkeydown = function(e) {
+          if (e.key === "Tab" && !e.shiftKey) {
+            firstElem.focus();
+            return false;
+          }
+        };
+
         container.style.display = "block";
         form.text.focus();
       }
