Forms: event and method submit

--- a/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/forms-event-and-method-submit/tasks/modal-form.html
@@ -125,6 +125,13 @@
           }
         };
 
+        firstElem.onkeydown = function(e) {
+          if (e.key === "Tab" && e.shiftKey) {
+            lastElem.focus();
+            return false;
+          }
+        };
+
         container.style.display = "block";
         form.text.focus();
       }
