--- a/part-2-browser-document-events-interfaces/document-and-resource-loading/page-DOMContentLoaded-load-beforeunload-unload/index.html
+++ b/part-2-browser-document-events-interfaces/document-and-resource-loading/page-DOMContentLoaded-load-beforeunload-unload/index.html
@@ -10,7 +10,8 @@
         console.log("DOM is ready");
         
         const image = document.getElementById("img");
-        
+
+        console.log(`Image size: ${image.offsetWidth}x${image.offsetHeight}`);
       }
     </script>
 
