--- a/part-2-browser-document-events-interfaces/document-and-resource-loading/page-DOMContentLoaded-load-beforeunload-unload/index.html
+++ b/part-2-browser-document-events-interfaces/document-and-resource-loading/page-DOMContentLoaded-load-beforeunload-unload/index.html
@@ -2,9 +2,7 @@
 <html>
   <body>
     <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        console.log("Ola");
-      });
+      document.addEventListener("DOMContentLoaded", ready);
 
       function ready() {
         console.log("DOM is ready");
@@ -14,7 +12,6 @@
         console.log(`Image size: ${image.offsetWidth}x${image.offsetHeight}`);
       }
     </script>
-
 
     <img id="img" src="https://en.js.cx/clipart/train.gif?speed=1&cache=0">
   </body>
